New-Upload-1755854042013/objects/Tab_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>Tab Settings</relationshipLabel>
        <relationshipName>Tab_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tab__c</fullName>
        <label>Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tab Setting</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Tab Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tab Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>